# design-patterns

./: README.md
include/: pattern.h
singleton/: CMakeLists.txt  main
singleton/src/: pattern.cpp
strategy_pattern/: CMakeLists.txt
strategy_pattern/include/: pattern.h
strategy_pattern/src/: pattern.cpp  strategy.cc  without_strategy.cc
tvm_ast_simplified/include/: ast.h  expr.h  object.h  stmt.h
tvm_ast_simplified/src/: main.cpp
tvm_ast_traversal/include/: ast.h  expr.h  expr_visitor.h  ir_module.h  object.h  visitor.h
tvm_ast_traversal/python/: with_visitor.py
tvm_ast_traversal/src/: main.cpp
tvm_ast_traversal2/: CMakeLists.txt  run.sh
tvm_ast_traversal2/include/: eval.h  expr.h  expr_visitor.h  ir_module.h  object.h  printer.h
tvm_ast_traversal2/src/: eval.cpp  main.cpp  printer.cpp
visitor/: README.md
visitor/python/: without_visitor.py
visitor/src/: pattern.cpp
visitor_pattern/src/: pattern.cpp
